--- a/site01.html
+++ b/site01.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Design de inferiores</title>
     <link rel="stylesheet" href="site01.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/3d-house.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/484c3cfbae.js" crossorigin="anonymous"></script>
 
 </head>
