--- a/design.html
+++ b/design.html
@@ -120,7 +120,7 @@
         </div>
 
         <div class="whatsapp">
-            <a href="https://www.whatsapp.com/">
+            <a href="https://www.whatsapp.com/" target="_blank">
                 <img src="imagens/whatsapp.png" alt="icone do whatsapp">
             </a>
 
